back to list button align is fixed in content detail page

--- a/src/app/pages/contents/contents.scss
+++ b/src/app/pages/contents/contents.scss
@@ -135,4 +135,8 @@
             }
         }
     }
+
+    .btn-wrapper {
+        text-align: center;
+    }
 }
